--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i');
+
+* {
+	box-sizing: border-box;
+}
+
+body {
+	font-family: 'Lora', serif;
+	background-color: #f5f5f5;
+	margin: 0 auto; 
+	font-size: 14px;
+	text-align: center;
+}
